Added link to GitHub in html

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
         </div>
       </div>
     </div>
+    <small><a href="https://github.com/eleanorgedge/EG-SheCodesPlus-WeatherApp" target="_blank">
+        Open-source code</a>, by Eleanor Gedge.</small>
   </div>
   <script src="src/script.js"></script>
 </body>
