--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
     </div>
     <div class="row">
       <div class="col-6">
-        <i class="fas fa-cloud-showers-heavy today-icon"></i>
+        <img 
+          src=""
+          alt=""
+          id="icon"
+          class="float-left"
+        />
       </div>
       <div class="col-6 weather-list">
         <br />
