--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <div class = "weather-app-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-9 search">
@@ -54,8 +55,7 @@
         <span class="windSpeed" id="windSpeed"></span>mph
       </div>
     </div>
-    <br />
-
+    </div>
     <small><a href="https://github.com/eleanorgedge/EG-SheCodesPlus-WeatherApp" target="_blank">
         Open-source code</a>, by Eleanor Gedge.</small>
   </div>
