--- a/index.html
+++ b/index.html
@@ -18,32 +18,21 @@
   <div class="weather-app-wrapper">
     <div class="container">
       <form id="search-form" class="mb-3">
-      <div class="row">
-        <div class="col-8">
-            <input 
-            type="search" 
-            class="form-control" 
-            placeholder="Enter a location" 
-            id="search-input" 
-            />
+        <div class="row">
+          <div class="col-8">
+            <input type="search" class="form-control" placeholder="Enter a location" id="search-input" />
+          </div>
+          <div class="col-2">
+            <button type="submit" class="btn" id="search-button">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+          <div class="col-2">
+            <button type="submit" class="btn" id="geo-button">
+              <i class="fas fa-search-location"></i>
+            </button>
+          </div>
         </div>
-        <div class="col-2">
-          <button 
-          type="submit" 
-          class="btn" 
-          id="search-button">
-          <i class="fas fa-search"></i>
-          </button>
-        </div>
-        <div class="col-2">
-          <button 
-          type="submit" 
-          class="btn" 
-          id="geo-button">
-          <i class="fas fa-search-location"></i>
-          </button>
-        </div>
-      </div>
       </form>
       <h1>Weather in...</h1>
       <span class="date"></span>
@@ -58,7 +47,6 @@
           <img src="" alt="" id="icon" class="float-left" />
         </div>
         <div class="col-6 weather-list">
-          <br />
           Description:
           <span class="Description" id="description"></span>
           <br />
@@ -70,6 +58,84 @@
           <br />
           Wind:
           <span class="windSpeed" id="windSpeed"></span>mph
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-8">
+            Tuesday
+          </div>
+          <div class="col-2 forecast">
+            4° C
+          </div>
+          <div class="col-2 forecast">
+            <i class="fas fa-cloud-showers-heavy"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-8">
+            Wednesday
+          </div>
+          <div class="col-2 forecast">
+            4° C
+          </div>
+          <div class="col-2 forecast">
+            <i class="fas fa-cloud-showers-heavy"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-8">
+            Thursday
+          </div>
+          <div class="col-2 forecast">
+            3° C
+          </div>
+          <div class="col-2 forecast">
+            <i class="fas fa-cloud-showers-heavy"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-8">
+            Friday
+          </div>
+          <div class="col-2 forecast">
+            3° C
+          </div>
+          <div class="col-2 forecast">
+            <i class="fas fa-cloud"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-8">
+            Saturday
+          </div>
+          <div class="col-2 forecast">
+            3° C
+          </div>
+          <div class="col-2 forecast">
+            <i class="fas fa-cloud"></i>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row">
+          <div class="col-8">
+            Sunday
+          </div>
+          <div class="col-2 forecast">
+            3° C
+          </div>
+          <div class="col-2 forecast">
+            <i class="fas fa-snowflake"></i>
+          </div>
         </div>
       </div>
     </div>
