Updated to include unit conversion on temperature

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <span class="date"></span>
       <br />
       <span class="temperature" id="temperature"></span>
-      <span class="metric">
-        <a href="#" id="celcius-link">°C </a> |
+      <span class="unit">
+        <a href="#" id="celcius-link" class="active">°C </a> |
         <a href="#" id="fahrenheit-link">°F </a>
       </span>
       <div class="row">
