Updated css and changed icons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-2">
             <button type="submit" class="btn" id="geo-button">
-              <i class="fas fa-search-location"></i>
+              <i class="fas fa-location-arrow"></i>
             </button>
           </div>
         </div>
