Fixed naming conventions of buttons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </button>
           </div>
           <div class="col-2">
-            <button type="button" class="btn" id="geo-button">
+            <button type="submit" class="btn" id="geo-button">
               <i class="fas fa-location-arrow"></i>
             </button>
           </div>
