--- a/index.html
+++ b/index.html
@@ -60,87 +60,23 @@
           <span class="windSpeed" id="windSpeed"></span>mph
         </div>
       </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-8">
-            Tuesday
-          </div>
-          <div class="col-2 forecast">
-            4° C
-          </div>
-          <div class="col-2 forecast">
-            <i class="fas fa-cloud-showers-heavy"></i>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-8">
-            Wednesday
-          </div>
-          <div class="col-2 forecast">
-            4° C
-          </div>
-          <div class="col-2 forecast">
-            <i class="fas fa-cloud-showers-heavy"></i>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-8">
-            Thursday
-          </div>
-          <div class="col-2 forecast">
-            3° C
-          </div>
-          <div class="col-2 forecast">
-            <i class="fas fa-cloud-showers-heavy"></i>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-8">
-            Friday
-          </div>
-          <div class="col-2 forecast">
-            3° C
-          </div>
-          <div class="col-2 forecast">
-            <i class="fas fa-cloud"></i>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-8">
-            Saturday
-          </div>
-          <div class="col-2 forecast">
-            3° C
-          </div>
-          <div class="col-2 forecast">
-            <i class="fas fa-cloud"></i>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="row">
-          <div class="col-8">
-            Sunday
-          </div>
-          <div class="col-2 forecast">
-            3° C
-          </div>
-          <div class="col-2 forecast">
-            <i class="fas fa-snowflake"></i>
-          </div>
-        </div>
-      </div>
+<div class="card weather-forecast" id="forecast">
+  <div class="row">
+    <div class="col-8 forecast-day">
+      Tuesday
     </div>
+    <div class="col-2 forecast-temperature">
+      4° C
+    </div>
+    <div class="col-2 forecast-icon">
+      <i class="fas fa-cloud-showers-heavy"></i>
+    </div>
+  </div>
+</div>
+</div>
     <small><a href="https://github.com/eleanorgedge/EG-SheCodesPlus-WeatherApp" target="_blank">
         Open-source code</a>, by Eleanor Gedge.</small>
+  </div>
   </div>
   <script src="src/script.js"></script>
 </body>
