Fixed naming conventions

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </form>
       <h1>Weather in...</h1>
-      <span class="dateTime" id="dateTime"></span>
+      <span class="date" id="dateTime"></span>
       <br />
       <span class="temperature" id="temperature"></span>
       <span class="unit">
