Updated html and js to have individual forecast banners

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <span class="windSpeed" id="windSpeed"></span>mph
         </div>
       </div>
-<div class="card weather-forecast" id="forecast">
+<div class="weather-forecast" id="forecast">
 </div>
 </div>
     <small><a href="https://github.com/eleanorgedge/EG-SheCodesPlus-WeatherApp" target="_blank">
