Reverted previous changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
       </form>
-      <h1>Weather in...</h1>
+      <h1></h1>
       <span class="date" id="dateTime"></span>
       <br />
       <span class="temperature" id="temperature"></span>
@@ -60,7 +60,7 @@
           <span class="windSpeed" id="windSpeed"></span>mph
         </div>
       </div>
-<div class="weather-forecast" id="forecast">
+<div class="card weather-forecast" id="forecast">
 </div>
 </div>
     <small><a href="https://github.com/eleanorgedge/EG-SheCodesPlus-WeatherApp" target="_blank">
