Added new images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </span>
       <div class="row">
         <div class="col-4">
-          <img src="" alt="" id="icon" class="float-left" />
+          <img src="" alt="" id="icon" class="icon-main" />
         </div>
         <div class="col-8 weather-list">
           Description:
@@ -60,10 +60,11 @@
           <span class="windSpeed" id="windSpeed"></span>mph
         </div>
       </div>
+    </br>
 <div class="card weather-forecast" id="forecast">
 </div>
 </div>
-    <small><a href="https://github.com/eleanorgedge/EG-SheCodesPlus-WeatherApp" target="_blank">
+    <small><a href="https://github.com/eleanorgedge/EG-SheCodesPlus-WeatherApp" target="_blank" class="signature">
         Open-source code</a>, by Eleanor Gedge.</small>
   </div>
   </div>
